--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1460,16 +1460,18 @@ form input[type="submit"], form button, form input[type="reset"] {
       padding: 10px 15px;
       text-transform: uppercase;
       background: #212121;
+	  background: rgba(10,54,124,.5);
+		border-radius:10px;
       color: white;
       margin-bottom: 10px; }
   .hero-slider .flex-direction-nav {
     position: absolute;
-    bottom: 200px;
+    bottom: 0;
     left: 0;
     right: 0;
-    margin: auto;
+    margin: auto; 
     z-index: 99;
-    height: 40px;
+    height: 100%;
     list-style: none;
     padding: 0 15px; }
     @media screen and (min-width: 768px) {
@@ -1483,20 +1485,27 @@ form input[type="submit"], form button, form input[type="reset"] {
         width: 1170px; } }
     .hero-slider .flex-direction-nav li {
       display: inline-block;
-      margin-right: 10px; }
+		position:absolute;
+	 background: #212121;
+	width:100%;}
       .hero-slider .flex-direction-nav li a {
         width: 64px;
         height: 64px;
         display: block;
         color: white;
         text-align: center;
-        line-height: 2;
+        line-height: 100%;
         font-size: 30px;
         font-size: 2.1428571429em; }
         .hero-slider .flex-direction-nav li a.flex-prev {
-          background: url("images/prev.png"); }
+			margin-left:0;
+			background: #212121;
+			height:100%;
+			}
         .hero-slider .flex-direction-nav li a.flex-next {
-          background: url("images/next.png"); }
+			background: #212121;
+		 margin-right:0;
+		height:100%;}
 
 .fullwidth-block {
   padding: 50px 0; }
@@ -1843,11 +1852,14 @@ form input[type="submit"], form button, form input[type="reset"] {
     text-align: center;
     margin-left: 10px;
     color: #d3d3d3;
+	  background-color:rgb(9,53,123);
+	  background-color:rgba(9,53,123,.4);
     line-height: 2.5;
     -webkit-transition: .3s ease;
             transition: .3s ease; }
     .site-footer .social-links a:hover {
-      border-color: #B70004; }
+      border-color: #B70004;
+	background-color:#B70004;}
       .site-footer .social-links a:hover:before, .site-footer .social-links a:hover:after {
         border-color: #B70004; }
     .site-footer .social-links a:before, .site-footer .social-links a:after {
